Revision history for AM-Algorithm

{{$NEXT}}
    Stopped printing to amcpresults and terminal
    Switched to Log::Any
    Added Algorithm::AM::Result module
    Removed separate support for "short" and "long" outcomes
    Changed add_test and add_data to accept spec last
2.45      2014-02-11 21:27:02 America/Los_Angeles
    Fixed gang/grandtotal calculation bugs
    removed debug print statements!
2.44      2014-02-11 16:13:54 America/Los_Angeles
    Fix gangcount updating (bad loop bound)
2.43      2014-02-11 12:22:57 America/Los_Angeles
    reverse 2.42 (think I was wrong)
    More debug printing
    don't pass ref to keys (experimental feature)
2.42      2014-02-10 21:32:23 America/Los_Angeles
    More debug printing
    fix uninitialized array element
2.41      2014-02-10 12:37:57 America/Los_Angeles
    More debug printing
    Fixed big-int bug introduced in 2.40
2.40      2014-02-09 18:37:58 America/Los_Angeles
    More debug printing
2.39      2014-02-08 21:32:43 America/Los_Angeles
    Added lots of print statements for trial release; need more info!
2.38      2014-02-07 20:27:29 America/Los_Angeles
    changed back C99 datatypes until further testing
2.37      2014-02-07 18:52:07 America/Los_Angeles
    removed non-existent dependency that prevented installation
2.36      2014-02-07 16:24:26 America/Los_Angeles
    remove given/when (which trigger 'experimental' warnings)
    better handling of project files
    line directives added to ginormous eval statement
    add methods to Project for adding data and test items
    use C99 datatypes in AM.xs to ensure correct bit sizes
2.35      2013-12-05 19:50:27 America/Los_Angeles
    created Algorithm::AM::Project to handle all data file processing
        - also checks size of data vectors!
        - has lots of accessors and new error checking, including problems with number of variables!
    caller's autoflush setting is no longer clobbered
    lots more refactoring