@@ -5,7 +5,7 @@ use Algorithm::AM;
 use Test::More 0.88;
 use Test::Exception;
 use Test::NoWarnings;
-plan tests => 5;
+plan tests => 4;
 use FindBin qw($Bin);
 use Path::Tiny;
 
@@ -18,13 +18,12 @@ test_project();
 sub test_input_checking {
     throws_ok {
         Algorithm::AM->new();
-    } qr/Must specify project/,
+    } qr/Missing required input Algorithm::AM::Project object\./,
     'dies when no project provided';
 
     throws_ok {
         Algorithm::AM->new(
-            $normal_path,
-            commas => 'no',
+            Algorithm::AM::Project->new(variables => 3),
             foo => 'bar'
         );
     } qr/Unknown option foo/,
@@ -32,29 +31,21 @@ sub test_input_checking {
     return;
 }
 
-# test constructor when given project object or path
+# test that constructor sets project properly
 sub test_project {
     subtest 'AM constructor is given Project object' => sub {
         plan tests => 2;
         my $project_path = path($Bin, '..', 'data', 'chapter3');
         my $am = Algorithm::AM->new(
-            $project_path,
-            commas => 'no',
-            variables => 3
+            Algorithm::AM::Project->new(
+                path => $project_path,
+                variables => 3,
+                commas => 'no'
+            )
         );
         isa_ok($am->get_project, 'Algorithm::AM::Project',
             'get_project returns correct object type');
         is($am->get_project->base_path, $project_path,
             'correct project base path (project dir)');
-    };
-    subtest 'AM constructor is given project path' => sub {
-        plan tests => 2;
-        my $project = Algorithm::AM::Project->new(variables => 3);
-        my $am = Algorithm::AM->new($project);
-        isa_ok($am->get_project, 'Algorithm::AM::Project',
-            'get_project returns correct object type');
-        is($am->get_project->base_path, $project->base_path,
-            'correct project base path (current directory)');
-        return;
     };
 }
